--- a/style.css
+++ b/style.css
@@ -1,21 +1,58 @@
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 20px;
-  font-family:'Times New Roman', Times, sans-serif;
+body{
+  background-color: #eee;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+a{
+  text-decoration: none;
+  color: red;
+}
+
+h1, h2, h3{
+  margin: 0;
+}
+
+#container{
+  background-color: white;
+  width: 800px;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+#header {
+  background-color: #66CCFF;
+  color: white;
   text-align: center;
+}
+
+#content {
   padding: 10px;
 }
-h1 {
-  font-size: large;
-}
-#container {
-  width: 800px;
-  margin-left: auto;
-  margin-right: auto;
-}
-#main {
-  background-color: #66CCFF;
-  color: dimgray;
+
+#nav{
+  width: 180px;
   float: left;
+}
+
+#nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+#nav .selected{
+  font-weight: bold;
+}
+
+
+#main{
+  width: 600px;
+  float: right;
+}
+
+#footer{
+  clear: both;
+  padding: 10px;
+  background-color: #999999;
+  color: #ffffff;
+  text-align: right;
 }
