--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body{
-  background-color: #eee;
+  background-color: #d8d8d8;
   font-family: Helvetica, Arial, sans-serif;
 }
 
 a{
   text-decoration: none;
-  color: red;
+  color: #d8d8d8;
+  
 }
 
 h1, h2, h3{
@@ -14,15 +15,25 @@ h1, h2, h3{
 
 #container{
   background-color: white;
-  width: 800px;
+  width: auto;
+  height: auto;
   margin-left:auto;
   margin-right:auto;
 }
 
 #header {
-  background-color: #66CCFF;
+  background-color: #ac3f3f;
   color: white;
-  text-align: center;
+  height: 50px;
+}
+
+#Name {
+  text-align: left;
+  float: left;
+  padding-top: 6px;
+  padding-bottom: 5px;
+  padding-right: 5px;
+  padding-left: 13px;
 }
 
 #content {
@@ -30,23 +41,31 @@ h1, h2, h3{
 }
 
 #nav{
-  width: 180px;
-  float: left;
+  width: 580px;
+  margin: auto;
+  text-align: center;
+  float: right;
 }
 
 #nav ul {
   list-style-type: none;
   padding: 0;
+  display: flex;
+  justify-content: space-between;
+  white-space: nowrap;
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
 #nav .selected{
   font-weight: bold;
+  color: white;
 }
 
 
 #main{
   width: 600px;
-  float: right;
+
 }
 
 #footer{
