--- a/style.css
+++ b/style.css
@@ -1,19 +1,14 @@
-body{
+body {
   background-color: #d8d8d8;
   font-family: Helvetica, Arial, sans-serif;
 }
 
-a{
+#nav a {
   text-decoration: none;
   color: #d8d8d8;
-  
 }
 
-h1, h2, h3{
-  margin: 0;
-}
-
-#container{
+#container {
   background-color: white;
   width: auto;
   height: auto;
@@ -34,13 +29,14 @@ h1, h2, h3{
   padding-bottom: 5px;
   padding-right: 5px;
   padding-left: 13px;
+  margin: 0;
 }
 
 #content {
-  padding: 10px;
+  padding-bottom: 1%;
 }
 
-#nav{
+#nav {
   max-width: 580px;
   width: 100%;
   margin: auto;
@@ -62,18 +58,12 @@ h1, h2, h3{
   align-items: center;
 }
 
-#nav .selected{
+#nav .selected {
   font-weight: bold;
   color: white;
 }
 
-
-#main{
-  width: auto;
-  padding: 2%;
-}
-
-#footer{
+#footer {
   clear: both;
   padding: 10px;
   background-color: #999999;
@@ -81,10 +71,19 @@ h1, h2, h3{
   text-align: right;
 }
 
+#main {
+  width: auto;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 0.5%;
+  padding-bottom: 2%;
+  float: left;
+}
+
 #about {
   width: 50%;
   float: right;
-  padding-top: 2%;
+  padding-top: 0.5%;
   padding-bottom: 2%;
   padding-right: 2%;
 }
@@ -92,5 +91,42 @@ h1, h2, h3{
 #selfie {
   float: left;
   width: 40%;
-  padding: 2%;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+}
+
+#Assignment {
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 0.5%;
+  padding-bottom: 2%;
+  float: left;
+}
+
+#Assignment h2 {
+  margin-bottom: 15px;
+}
+
+#Assignment_list a {
+  text-decoration: none;
+  color: #ac3f3f;
+}
+
+#Assignment_list .flex-container {
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0;
+}
+
+#Final {
+  width: 50%;
+  float: right;
+  padding-top: 0.5%;
+  padding-bottom: 2%;
+  padding-right: 2%;
 }
