--- a/style.css
+++ b/style.css
@@ -72,17 +72,17 @@ body {
 }
 
 #main h1 {
-    animation-duration: 3s;
+    animation-duration: 2.5s;
     animation-name: slideinright;
 }
 
 #main h2 {
-  animation-duration: 3.5s;
+  animation-duration: 3s;
   animation-name: slideinright;
 }
 
 #main p {
-  animation-duration: 4s;
+  animation-duration: 3.5s;
   animation-name: slideinright;
 }
 
@@ -117,8 +117,8 @@ body {
   padding-top: 5%;
   padding-bottom: 2%;
   padding-right: 2%;
-  animation-duration: 2s;
-  animation-name: slideinbottom;
+  animation-duration: 2.5s;
+  animation-name: fadein;
 }
 
 #selfie {
@@ -128,17 +128,15 @@ body {
   padding-right: 1%;
   padding-top: 0%;
   padding-bottom: 3%;
-  animation-duration: 2s;
-  animation-name: slideinbottom;
 }
 
-@keyframes slideinbottom {
+@keyframes fadein {
   from {
-    margin-top: 100%;
+    opacity: 0;
   }
   
   to {
-    margin-top: 0%;
+    opacity: 1;
   }
 }
 
@@ -148,6 +146,8 @@ body {
   padding-top: 0.5%;
   padding-bottom: 2%;
   float: left;
+  animation-duration: 2s;
+  animation-name: fadein;
 }
 
 #Assignment h2 {
@@ -279,6 +279,8 @@ hr {
   padding-top: 0.5%;
   padding-bottom: 2%;
   padding-right: 2%;
+  animation-duration: 2s;
+  animation-name: fadein;
 }
 
 #FPP1 {
