--- a/style.css
+++ b/style.css
@@ -214,12 +214,71 @@ body {
   margin-bottom: 2%;
 }
 
+#AV1v2 {
+  float: left;
+  width: 35%; 
+  margin-right: 2%;
+  margin-bottom: 1%;
+}
+
+#AV2v2 {
+  float: right;
+  clear: left;
+  width: 35%;
+  margin-left: 2%;
+  margin-bottom: 1%;
+}
+
+#AV2v3 {
+  float: right;
+  clear: left;
+  width: 35%;
+  margin-left: 2%;
+  margin-bottom: 2%;
+}
+
+#AV3v2 {
+  float: left;
+  clear: both;
+  width: 35%;
+  margin-right: 2%;
+  margin-bottom: 1%;
+}
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  width: 100%;
+  margin-bottom: 1%;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#Poster {
+  width: 100%;
+}
+
 #A1P {
   clear: left;
   float: right;
   width: 40%;
   margin-left: 2%;
   margin-bottom: 2%;
+}
+
+#F1P {
+  clear: left;
+}
+
+#F2P {
+  clear: right;
 }
 
 #Css {
@@ -285,22 +344,13 @@ hr {
 }
 
 #Final {
-  width: 50%;
-  float: right;
+
   padding-top: 0.5%;
   padding-bottom: 2%;
   padding-right: 2%;
+  padding-left: 2%;
   animation-duration: 2s;
   animation-name: fadein;
-}
-
-#FPP1 {
-  float: left;
-  width: 40%;
-  padding-left: 2%;
-  padding-right: 2%;
-  padding-top: 2%;
-  padding-bottom: 3%;
 }
 
 #A3P1v2 {
